--- a/configure.in
+++ b/configure.in
@@ -51,6 +51,13 @@ case "$host" in
 		bfd_target=powerpc
 		platform=powerpc
 		;;
+	*86-apple-darwin*)
+		glue_flags=
+		server_cflags=
+		server_only=yes
+		bfd_target=i386darwin
+		platform=i386darwin
+		;;
 	*)
 		AC_MSG_ERROR([*** This platform is not yet supported.])
 		;;
@@ -64,10 +71,12 @@ AC_ARG_WITH(bfd-target,
 	fi
 )
 
+AM_CONDITIONAL(BFD_TARGET_X86_MACH, test x$bfd_target = xi386darwin)
 AM_CONDITIONAL(BFD_TARGET_POWERPC, test x$bfd_target = xpowerpc)
 AM_CONDITIONAL(BFD_TARGET_X86_64, test x$bfd_target = xx86_64)
-AM_CONDITIONAL(PLATFORM_X86_64, test x$platform = xx86_64)
+AM_CONDITIONAL(PLATFORM_X86_DARWIN, test x$platform = xi386darwin)
 AM_CONDITIONAL(PLATFORM_POWERPC, test x$platform = xpowerpc)
+AM_CONDITIONAL(PLATFORM_X86_64, test x$platform = xx86_64)
 
 AC_SUBST(glue_cflags)
 AC_SUBST(server_cflags)
@@ -251,7 +260,7 @@ AC_CHECK_HEADERS(fcntl.h sys/user.h sys/file.h sys/time.h termcap.h termcap/term
 AC_HEADER_TIME
 AC_HEADER_DIRENT
 AC_CHECK_FUNCS(fcntl getpagesize setitimer sysconf fdopen getuid getgid)
-AC_CHECK_FUNCS(strlcpy strlcat)
+AC_CHECK_FUNCS(strlcpy strlcat fgetln)
 
 CHECK_READLINE
 
@@ -276,6 +285,8 @@ AC_SUBST(XSP_CFLAGS)
 AC_SUBST(XSP_LIBS)
 AM_CONDITIONAL(HAVE_XSP, test "x$with_xsp" = "xyes")
 
+#not sure why, but I cannot get this test to pass on OS X.
+if test x$PLATFORM_X86_DARWIN = "xno" ; then
 AC_MSG_CHECKING([Whether your Mono is working])
 old_CFLAGS=$cflags
 CFLAGS=$WRAPPER_CFLAGS
@@ -296,6 +307,7 @@ AC_MSG_RESULT($mono_working)
 CFLAGS=$old_CFLAGS
 if test x$mono_working != xyes; then
    AC_MSG_ERROR([*** Your Mono is too old for this version of the debugger.])
+fi
 fi
 
 martin_private=no
