Improved error handling in the expression parser. 2009-06-16  Martin Baulig  <martin@ximian.com>
	* classes/ExpressionEvaluator.cs
	(ExpressionParsingException): Removed 'ErrorOutput'.

	* frontend/CSharpTokenizer.cs
	(SyntaxError): Removed.
	(Tokenizer): Throw a 'yyParser.yyException' instead of returning
	'Token.ERROR'; killed 'Error'.

	* frontend/jay/skeleton.cs: Killed 'ErrorOutput', yyerror() now
	throws a 'yyParser.yyException'.

	* frontend/CSharpExpressionParser.jay: Improved error handling.

	* frontend/skeleton: Removed.
	* frontend/jay/skeleton: Removed.

svn path=/trunk/debugger/; revision=136274

--- a/frontend/Makefile.am
+++ b/frontend/Makefile.am
@@ -10,7 +10,7 @@ CSharpExpressionParser.cs: CSharpExpressionParser.jay $(srcdir)/jay/skeleton.cs
 
 DISTCLEANFILES = CSharpExpressionParser.cs y.output
 
-EXTRA_DIST = skeleton CSharpExpressionParser.jay $(srcdir)/*.cs
+EXTRA_DIST = CSharpExpressionParser.jay $(srcdir)/*.cs
 
 dist-hook:
 	rm -f CSharpExpressionParser.cs
