--- a/frontend/jay/Makefile.am
+++ b/frontend/jay/Makefile.am
@@ -4,5 +4,5 @@ noinst_PROGRAMS=jay
 jay_SOURCES = closure.c error.c lalr.c lr0.c main.c mkpar.c output.c reader.c \
               symtab.c verbose.c warshall.c defs.h
 
-EXTRA_DIST = ACKNOWLEDGEMENTS NEW_FEATURES NOTES README README.jay skeleton \
+EXTRA_DIST = ACKNOWLEDGEMENTS NEW_FEATURES NOTES README README.jay \
              skeleton.cs jay.1
