Officially enable attaching again - we check whether the target runtime actually supports it and attach in native mode if not. 2009-06-30  Martin Baulig  <martin@ximian.com>
	Officially enable attaching again - we check whether the target
	runtime actually supports it and attach in native mode if not.

	* configure.in: Check whether the current runtime supports
	attaching and enable the attaching tests; note that the check is
	only used to determine whether or not to run the tests, not
	whether the feature as such is included.

	* classes/DebuggerConfiguration.cs: Removed the private
	configuration option to enable attaching; attaching is now enabled
	by default if the target runtime supports it.

	* test/testsuite/TestAttach.cs: Start the child process with
	`-O=-gshared'.

	* backend/MonoThreadManager.cs
	(MonoThreadManager.ctor): Don't call read_thread_table().
	(MonoThreadManager.read_thread_table): Renamed into
	InitializeThreads() and made it internal.

	* backend/ProcessServant.cs
	(ProcessServant.InitializeMono): Call
	`MonoThreadManager.InitializeThreads()' after our
	InitializeThreads().

	* backend/server/x86-ptrace.c
	(server_ptrace_attach): Don't call _server_ptrace_setup_inferior().

svn path=/trunk/debugger/; revision=137139

--- a/configure.in
+++ b/configure.in
@@ -286,7 +286,7 @@ AC_SUBST(XSP_LIBS)
 AM_CONDITIONAL(HAVE_XSP, test "x$with_xsp" = "xyes")
 
 #not sure why, but I cannot get this test to pass on OS X.
-if test x$PLATFORM_X86_DARWIN = "xno" ; then
+if test x$platform != xi386darwin ; then
 AC_MSG_CHECKING([Whether your Mono is working])
 old_CFLAGS=$cflags
 CFLAGS=$WRAPPER_CFLAGS
@@ -308,7 +308,30 @@ CFLAGS=$old_CFLAGS
 if test x$mono_working != xyes; then
    AC_MSG_ERROR([*** Your Mono is too old for this version of the debugger.])
 fi
+
+AC_MSG_CHECKING([Whether attaching is supported in this version of the Mono runtime])
+old_CFLAGS=$cflags
+CFLAGS=$WRAPPER_CFLAGS
+#define MONO_DEBUGGER_MAJOR_VERSION			81
+#define MONO_DEBUGGER_MINOR_VERSION			3
+AC_TRY_COMPILE([#include <mono/metadata/mono-debug.h>
+#include <mono/metadata/debug-mono-symfile.h>
+], [
+#if MONO_DEBUGGER_MAJOR_VERSION < 81
+#error "Major version older than 81."
+#endif
+#if MONO_DEBUGGER_MAJOR_VERSION == 81
+#if MONO_DEBUGGER_MINOR_VERSION < 3
+#error "Minor version older than 3."
+#endif
+#endif
+], attaching_supported=yes, attaching_supported=no)
+AC_MSG_RESULT($attaching_supported)
+CFLAGS=$old_CFLAGS
+else
+attaching_supported=no
 fi
+AM_CONDITIONAL(ATTACHING_SUPPORTED, test x$attaching_supported = xyes)
 
 martin_private=no
 if test "x$from_svn" = "xyes"; then
