--- a/configure.in
+++ b/configure.in
@@ -334,7 +334,7 @@ frontend/jay/Makefile
 frontend/libedit/Makefile
 test/Makefile
 test/src/Makefile
-test/misc/Makefile
+test/framework/Makefile
 test/testsuite/Makefile
 doc/Makefile
 ])
