fix dist and bump version
svn path=/trunk/debugger/; revision=140748

--- a/test/misc/Makefile.am
+++ b/test/misc/Makefile.am
@@ -1,6 +1,6 @@
 INCLUDES = -g -O0 @SERVER_DEPENDENCIES_CFLAGS@ @server_cflags@
 
-EXTRA_DIST = LibGTop.cs
+#EXTRA_DIST = LibGTop.cs
 
 CLEANFILES = lib*.a lib*.dll
 
