Moved all the Mono Runtime code into a new directory backend/mono/. 2009-09-15  Martin Baulig  <martin@ximian.com>
	* backend/mono/: Moved all the Mono Runtime code here.

	* backend/MonoThreadManager.cs: Moved to backend/mono/.
	* languages/mono/MonoLanguageBackend.cs: Likewise.
	* languages/mono/MonoRuntime.cs: Likewise.

svn path=/trunk/debugger/; revision=141971

--- a/configure.in
+++ b/configure.in
@@ -359,6 +359,7 @@ build/Mono.Debugger.dll.config
 backend/Makefile
 backend/server/Makefile
 backend/arch/Makefile
+backend/mono/Makefile
 backend/os/Makefile
 backend/os/bfd/libiberty/Makefile
 backend/os/bfd/opcodes/Makefile
