--- a/configure.in
+++ b/configure.in
@@ -113,16 +113,6 @@ if test "x$PKG_CONFIG" = "xno"; then
 	AC_MSG_ERROR([You need to install pkg-config])
 fi
 
-AC_MSG_CHECKING([whether we're compiling from SVN])
-if test -f "$srcdir/.svn_version" ; then
-	from_svn=yes
-else
-	from_svn=no
-fi
-AC_MSG_RESULT($from_svn)
-
-AM_CONDITIONAL(COMPILING_FROM_SVN, test x$from_svn = xyes)
-
 pkg_config_path=
 AC_ARG_WITH(crosspkgdir, [  --with-crosspkgdir=/path/to/pkg-config/dir],
 	if test x$with_crosspkgdir = "x"; then
@@ -145,20 +135,28 @@ PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION)
 AC_SUBST(BASE_DEPENDENCIES_CFLAGS)
 AC_SUBST(BASE_DEPENDENCIES_LIBS)
 
+debugger_major_version=81
+min_debugger_minor_version=0
+symfile_major_version=50
+min_symfile_minor_version=0
+
 AC_MSG_CHECKING([Whether we're using Mono from trunk])
 ## Check for Mono from trunk
 if pkg-config --modversion mono-2>/dev/null; then
 	have_mono_trunk=true
 	mono_pc=mono-2
+	min_debugger_minor_version=6
+	server_deps="glib-2.0 >= $GLIB_REQUIRED_VERSION $martin_deps"
 	AC_MSG_RESULT([yes])
 else
 	have_mono_trunk=false
 	mono_pc=mono
+	server_deps="$mono_pc >= $MONO_REQUIRED_VERSION glib-2.0 >= $GLIB_REQUIRED_VERSION $martin_deps"
 	AC_MSG_RESULT([no])
 fi
 
 ## Versions of dependencies
-PKG_CHECK_MODULES(SERVER_DEPENDENCIES, $mono_pc >= $MONO_REQUIRED_VERSION glib-2.0 >= $GLIB_REQUIRED_VERSION $martin_deps)
+PKG_CHECK_MODULES(SERVER_DEPENDENCIES, $server_deps)
 AC_SUBST(SERVER_DEPENDENCIES_CFLAGS)
 AC_SUBST(SERVER_DEPENDENCIES_LIBS)
 
@@ -276,10 +274,6 @@ AC_CHECK_FUNCS(strlcpy strlcat fgetln)
 
 CHECK_READLINE
 
-min_mono_version=72
-symfile_major_version=50
-min_symfile_minor_version=0
-
 AC_ARG_WITH(xsp,
 [  --with-xsp              Enable XSP support (experimental)],
 with_xsp=yes, with_xsp=no)
@@ -305,7 +299,10 @@ CFLAGS=$WRAPPER_CFLAGS
 AC_TRY_COMPILE([#include <mono/metadata/mono-debug.h>
 #include <mono/metadata/debug-mono-symfile.h>
 ], [
-#if MONO_DEBUGGER_MAJOR_VERSION < $min_mono_version
+#if MONO_DEBUGGER_MAJOR_VERSION != $debugger_major_version
+#error "Your mono is too old for this version of the debugger."
+#endif
+#if MONO_DEBUGGER_MINOR_VERSION < $min_debugger_minor_version
 #error "Your mono is too old for this version of the debugger."
 #endif
 #if MONO_SYMBOL_FILE_MAJOR_VERSION != $symfile_major_version
@@ -363,6 +360,7 @@ AM_CONDITIONAL(DISABLED, false)
 if test x$have_mono_trunk = xtrue; then
    AC_DEFINE([USING_MONO_FROM_TRUNK], [1], [Whether we're using Mono from trunk])
 fi
+AM_CONDITIONAL(MONO_TRUNK, test x$have_mono_trunk = xtrue)
 
 AC_OUTPUT([
 Makefile
