Moved backend/server -> sysdeps/server.
The C# code is now nicely separated from the unmanaged C code.

--- a/configure.in
+++ b/configure.in
@@ -378,8 +378,8 @@ sysdeps/bfd/include/aout/Makefile
 sysdeps/bfd/include/coff/Makefile
 sysdeps/bfd/include/elf/Makefile
 sysdeps/bfd/include/opcode/Makefile
+sysdeps/server/Makefile
 backend/Makefile
-backend/server/Makefile
 backend/arch/Makefile
 backend/mono/Makefile
 backend/os/Makefile
